# WebProject

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  meetings.md  pyproject.toml  requirements.txt
database/: app.py  seed_db.py
database/instance/: test.db
discord-bot/: bot.py
game/: __init__.py  api.py  game_logic.py  models.py  views.py
game/resources/: app.py  dailyword.py  game.py  guess.py  seed_db.py  user.py
game/resources/instance/: test.db
nginx/: wordleGame.conf  wordlegame.conf
statservice/: Dockerfile  __init__.py  models.py  poller.py  pyproject.toml
statservice/resources/: userstats.py
statservice/statservice/: __init__.py  api.py  models.py  poller.py  views.py
statservice/statservice/resources/: leaderboard.py  userstats.py
supervisor/: supervisord.conf
tests/: api_test.py  db_test.py
wordleGame/: api.py  game_logic.py  models.py
wordleGame/resources/: dailyword.py  game.py  guess.py  user.py
wordlegame/: Dockerfile  __init__.py  api.py  game_logic.py  models.py  openapi.yaml  pyproject.toml  views.py
wordlegame/resources/: dailyword.py  game.py  guess.py  user.py
wordlegame/wordlegame/: __init__.py  models.py
wordlegame/wordlegame/resources/: dailyword.py  guess.py
