[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stats-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-restful",
    "apscheduler",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stats_service*"]